# Langchain-chatbot

./: .gitignore  LICENSE  README.md  cambios.md  config.yaml  main.py  pyproject.toml  render.yaml  requirements.txt  vercel.json
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260311_000001_initial_schema.py  20260311_000002_auth_schema.py  20260315_000003_chat_message_attachments.py  20260315_000004_indexed_documents.py  20260324_000005_chat_message_citations.py  20260403_000006_thread_summary_user_memory.py  20260403_000007_message_branches.py  20260406_000008_parent_message_id.py  20260408_000009_message_metrics.py  20260415_000010_thread_system_prompt.py  20260415_000011_user_is_admin.py  20260417_000012_reasoning_support.py  20260427_000013_drop_password_hash.py  20260427_000014_add_username_restore_password_hash.py  20260427_000015_nullable_email.py
backend/app/: __init__.py  constants.py  db.py  models.py  rate_limit.py  runtime_config.py  schemas.py  security.py
backend/app/graphs/: _nodes.py  _stream.py  chat_graph.py
backend/app/routers/: __init__.py  auth.py  catalog.py  users.py
backend/app/services/: auth.py  catalog.py  catalog_sync.py  current_user.py  history.py  memory.py  pinecone_store.py  rag.py
backend/tests/: test_auth_registration.py  test_document_management.py  test_history.py  test_memory.py  test_rag_integration.py  test_reasoning.py  test_runtime_security.py  test_tool_calling.py
backend/tests/evals/: README.md  dataset.jsonl  run_evals.py  scorers.py
backend/tests/evals/fixtures/: lexicon.md  orbital_widgets_api.md  redshift_protocol_spec.md
frontend/: README.md  eslint.config.mjs  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: app-sidebar.tsx  auth-page.tsx  chat-session.tsx  chat-shell.tsx  conversation.tsx  example.tsx  (+8 more)
src/: auth.py  chat_interface.py  db.py  graph.py  main.py  nodes.py  parent_document_rag.py  setup.py  splitter.py  style.py  stytle.py  title_setter.py  vector_store.py
(+55 files in other folders)
