[project]
name = "gemis-ba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.45.0",
    "ipykernel>=6.30.1",
    "langchain[groq]>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-ollama>=0.3.8",
    "lark>=1.2.2",
    "ollama>=0.5.3",
    "pypdf>=6.0.0",
    "langchain-chroma>=0.2.6",
    "langgraph>=0.6.7",
    "langchain-qdrant>=0.2.1",
]
