[project]
name = "gemis-ba"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.45.0",
    "ipykernel>=6.30.1",
    "langchain-community>=0.3.29",
    "lark>=1.2.2",
    "pypdf>=6.0.0",
    "langchain-chroma>=0.2.6",
    "langgraph>=0.6.7",
    "langchain-openai>=0.3.33",
    "pymupdf>=1.26.4",
    "dotenv>=0.9.9",
]
