[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "cryptography>=44.0.1",
    "fastapi[standard]>=0.128.0",
    "httpx>=0.28.1",
    "langchain>=1.2.6",
    "langgraph>=1.0.0",
    "langchain-anthropic>=0.3.22",
    "langchain-google-genai>=2.1.12",
    "langchain-openai>=1.1.7",
    "pinecone>=8.1.0",
    "pypdf>=6.8.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.40.0",
]
